--- a/content/themes/ghost-Max/assets/scss/_school-page.scss
+++ b/content/themes/ghost-Max/assets/scss/_school-page.scss
@@ -37,7 +37,7 @@ SCHOOL PAGE
 
 .intro-text{
     display: block;
-    overflow: scroll;
+    overflow: hidden;
     float: left;
     max-width: 60%;
     max-height: 90%;
