--- a/content/themes/ghost-Max/assets/scss/_gallery-page.scss
+++ b/content/themes/ghost-Max/assets/scss/_gallery-page.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: $page-height;
     background: #fff;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .gallery-items{
