--- a/content/themes/ghost-Max/partials/event.hbs
+++ b/content/themes/ghost-Max/partials/event.hbs
@@ -1,6 +1,6 @@
 {{! This is the post loop - each post will be output using this markup }}
+{{#get "posts" filter="tags:event" limit="4"}}
 {{#foreach posts}}
-<a href="{{url}}" class="{{post_class}}">
     <div class="event-item">
         <div class="event-img" style="background-image: url({{image}})"></div>
         <div class="event-intro">
@@ -12,8 +12,8 @@
             </p>
         </div>
     </div>
-</a>
 {{/foreach}}
+{{/get}}
 
-{{! Previous/next page links - displayed on every page }}
-{{pagination}}
+<!-- {{! Previous/next page links - displayed on every page }}
+{{pagination}} -->
