--- a/content/themes/ghost-Max/partials/event.hbs
+++ b/content/themes/ghost-Max/partials/event.hbs
@@ -2,15 +2,18 @@
 {{#get "posts" filter="tags:event" limit="4"}}
 {{#foreach posts}}
     <div class="event-item"  data-imgurl="{{image}}">
+        <a href="{{url}}" style="display: block; position: absolute; width: 100%; height: 100%;">
         <div class="event-img" style="background-image: url({{image}})"></div>
         <div class="event-intro">
             <p>
                 {{title}}
-                {{excerpt characters="20"}}
+                <br>
+                {{excerpt characters="40"}}
                 <br>
                 <span class="event-date lightfont">{{date published_at format="MMMM DD, YYYY"}}</span>
             </p>
         </div>
+        </a>
     </div>
 {{/foreach}}
 {{/get}}
