--- a/content/themes/ghost-Max/partials/footer.hbs
+++ b/content/themes/ghost-Max/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer">
     <!-- <div class="logo">
         <img src="imgs/homeimg.png" width="410px" height="200px" alt="Wenzhou-Kean University / Robert Bush School of Design" />
     </div> -->
@@ -29,4 +29,5 @@
     <div class="copyright">
         Copyright &copy;2016
     </div>
+
 </footer>
