--- a/content/themes/ghost-Max/assets/scss/_gallery-page.scss
+++ b/content/themes/ghost-Max/assets/scss/_gallery-page.scss
@@ -22,8 +22,8 @@
 .gallery-item{
     position: relative;
     display: inline-block;
-    height: 226px;
-    width: 234px;
+    height: 250px;
+    width: 250px;
     overflow: hidden;
     background-color: #f1c40f;
     margin: 1.357% 21px;
@@ -31,6 +31,8 @@
         position: absolute;
         left: 0;
         top: 0;
+        width: 101%;
+        height: 101%;
     }
 }
 
