--- a/content/themes/ghost-Max/partials/event.hbs
+++ b/content/themes/ghost-Max/partials/event.hbs
@@ -1,8 +1,8 @@
 {{! This is the post loop - each post will be output using this markup }}
 {{#get "posts" filter="tags:event" limit="4"}}
 {{#foreach posts}}
+<a href="{{url}}">
     <div class="event-item"  data-imgurl="{{image}}">
-        <a href="{{url}}" style="display: block; position: absolute; width: 100%; height: 100%;">
         <div class="event-img" style="background-image: url({{image}})"></div>
         <div class="event-intro">
             <p>
@@ -13,8 +13,8 @@
                 <span class="event-date lightfont">{{date published_at format="MMMM DD, YYYY"}}</span>
             </p>
         </div>
-        </a>
     </div>
+</a>
 {{/foreach}}
 {{/get}}
 <script type="text/javascript">
